# pta-hexagonal-arch

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.mk  notes.md  pyproject.toml  requirements-dev.txt
infra/docker/: docker-compose.local-dev.yml  docker-compose.local-test.yml
infra/docker/api/: Dockerfile.dev  Dockerfile.test  start-dev  start-test
src/api/: app.py  app_factory.py
src/api/adapters/outbound/logger/: dev.py
src/api/adapters/outbound/repository/memory/: create_customer.py  create_order.py
src/api/controller/: __init__.py  routes.py
src/api/controller/exceptions/: handlers.py  schemas.py
src/api/controller/first_order/: dtos.py  routes.py
src/api/core/: __init__.py
src/api/core/domain/: address.py  basket.py  customer.py  order.py  package_deal.py  product.py  purchase.py
src/api/core/ports/outbound/: logger.py  repository.py
src/api/core/ports/outbound/repository/: create_customer.py  create_order.py
src/api/core/services/: create_customer.py  create_first_order.py  create_order.py
src/api/settings/: factory.py  pydantic.py
src/tests/: conftest.py
src/tests/integration/: test_create_first_order.py  test_fastapi_root.py
src/tests/unit/: test_create_first_order.py
